--- a/templates/ScreeningApp/screening.html
+++ b/templates/ScreeningApp/screening.html
@@ -10,7 +10,7 @@
 <form method="post">
 {%csrf_token%}
 
-{% for question in question %}
+{% for question in questions %}
 
 
 <h3>{{question.question}}</h3><br>
