--- a/templates/ScreeningApp/screening_preview.html
+++ b/templates/ScreeningApp/screening_preview.html
@@ -24,22 +24,18 @@
           <h3>{{i.question}}</h3><br>
 
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_1" {% if question.candidate_ans=="option_1"
-            %}checked{%endif%}>
+          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_1" {%if question.candidate_ans == "option_1"%} checked {% endif %} >
           <label for="option_1">{{i.option_1}}</label><br>
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_2" {% if question.candidate_ans=="option_2"
-            %}checked{%endif%}>
+          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_2" {%if question.candidate_ans == "option_2"%}checked {% endif %}>
           <label for="option_2">{{i.option_2}}</label><br>
 
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_3" {% if question.candidate_ans=="option_3"
-            %}checked{%endif%}>
+          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_3" {%if question.candidate_ans == "option_3"%}checked {% endif %}>
           <label for="option_1">{{i.option_3}}</label><br>
 
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_4" {% if question.candidate_ans=="option_4"
-            %}checked{%endif%}>
+          <input type="radio" id={{i.question_id}} name={{i.question_id}} value="option_4" {%if question.candidate_ans == "option_4"%}checked {% endif %}>
           <label for="option_4">{{i.option_4}}</label><br>
 
 
