--- a/templates/ScreeningApp/screening_submission.html
+++ b/templates/ScreeningApp/screening_submission.html
@@ -23,24 +23,24 @@
           <h3>{{i.question}}</h3><br>
 
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} disabled='disabled' value="option_1" {% if question.candidate_ans == "option_1" %} checked{% endif %}  />
+          <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_1" {% if question.candidate_ans == "option_1" %} checked{% endif %}  />
           <label for="option_1">{{i.option_1}}</label><br>
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} disabled='disabled' value="option_2" {% if question.candidate_ans == "option_2" %} checked{% endif %}/>
+          <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_2" {% if question.candidate_ans == "option_2" %} checked{% endif %}/>
           <label for="option_2">{{i.option_2}}</label><br>
 
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} disabled='disabled' value="option_3" {% if question.candidate_ans == "option_3" %} checked{% endif %} />
+          <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_3" {% if question.candidate_ans == "option_3" %} checked{% endif %} />
           <label for="option_1">{{i.option_3}}</label><br>
 
 
-          <input type="radio" id={{i.question_id}} name={{i.question_id}} disabled='disabled' value="option_4" {% if question.candidate_ans == "option_4" %} checked{% endif %} />
+          <input type="radio" id={{question.id}} name={{question.id}} disabled='disabled' value="option_4" {% if question.candidate_ans == "option_4" %} checked{% endif %} />
           <label for="option_4">{{i.option_4}}</label><br>
 
 
           {%endfor%}
           {%endfor%}
-          <input type="submit" class="btn btn-success" value="Save">
+          <input type="submit" class="btn btn-success" value="Submit">
         </form>
       </div>
 
