--- a/templates/TFC/orghome.html
+++ b/templates/TFC/orghome.html
@@ -9,7 +9,14 @@
     </head>
 
     <body>
-            
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                    <!-- Brand/logo -->
+                    {% load static %}
+                    <a  href="#" class="navbar-brand">
+
+                            <img src="/uploads/{{org.logo}}" width="50", height="50">
+                    </a>
+                    </nav>
             {% block body %}
             
             <div>
