TFC dashboard modified

--- a/templates/TFC/login.html
+++ b/templates/TFC/login.html
@@ -18,6 +18,14 @@
                     </nav>
         <div>
             <br>
+            {% if messages %}
+                {% for msg in messages %}
+                     <div class="alert alert-info alert-dismissable">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                {{msg.message}}
+                    </div>
+                {% endfor %}
+            {% endif %}
             <form  method="post">
                 {%csrf_token%}
                 {{form.as_p}}
