--- a/templates/TFC/members.html
+++ b/templates/TFC/members.html
@@ -15,6 +15,21 @@
 
                             <img src="/uploads/{{org.logo}}" width="50", height="50">
                     </a>
+                    <ul class="navbar-nav ml-auto">
+                                <li class="nav-item ">
+                                  <a class="nav-link" href="dashboard" >Home</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="members" >Members</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#">Volunteers</a>
+                                </li>
+                                <li class="nav-item">
+                                  <a class="nav-link" href="#">Donations</a>
+                                </li>
+                                <a href="logout" class="btn btn-primary">Logout</a>
+                              </ul>
                     </nav>
             {% block body %}
             
