--- a/templates/TFC/password_set.html
+++ b/templates/TFC/password_set.html
@@ -14,6 +14,14 @@
     </head>
 
     <body onload="preventBack();" onpageshow="if (event.persisted) preventBack();" onunload="">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <!-- Brand/logo -->
+            {% load static %}
+            <a  href="#" class="navbar-brand">
+
+                    <img src="/uploads/{{org.logo}}" width="50", height="50">
+            </a>
+            </nav>
             {% block body %}
             <form method="post">
                     {%csrf_token%}
