--- a/templates/TFC/orghome.html
+++ b/templates/TFC/orghome.html
@@ -20,6 +20,14 @@
             {% block body %}
             
             <div>
+                        {% if messages %}
+                        {% for msg in messages %}
+                             <div class="alert alert-info alert-dismissable">
+                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                        {{msg.message}}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 <h3>{{org.name}}</h3>
                 <h4>{{org.website}}</h4>
                 <h4>{{org.partner_desc}}</h4>
