--- a/templates/TFC/volunter_list.html
+++ b/templates/TFC/volunter_list.html
@@ -44,6 +44,8 @@
             {% for volunteer in org.volunteer_set.all %}
             <div>
                 <h3>{{volunteer.name}}</h3>
+                <h3>{{volunteer.areaofexpertise}}</h3>
+                <h3>{{volunteer.profession}}</h3>
                 <a href="" class="btn btn-primary">Edit</a>
                 <a href="" class="btn btn-danger">Delete</a>
                 
