--- a/templates/TFC/volunteer_signup.html
+++ b/templates/TFC/volunteer_signup.html
@@ -13,7 +13,7 @@
                     {% load static %}
                     <a  href="#" class="navbar-brand">
 
-                            <img src="/uploads/{{org.logo}}" width="50", height="50">
+                            <img src="{{org.logo.url}}" width="50", height="50">
                     </a>
                     </nav>
         {% block body %}
