--- a/templates/TFC/orgdashboard.html
+++ b/templates/TFC/orgdashboard.html
@@ -23,7 +23,7 @@
                                   <a class="nav-link" href="members" >Members</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link" href="volunteerlist">Volunteers</a>
+                                  <a class="nav-link" href="volunteers">Volunteers</a>
                                 </li>
                                 <li class="nav-item">
                                   <a class="nav-link" href="#">Donations</a>
