Password set and reset view created

--- a/templates/TFC/login.html
+++ b/templates/TFC/login.html
@@ -31,7 +31,8 @@
                 {{form.as_p}}
                 
                 
-                <button type="submit" class="btn btn-success">Login</button>
+                <button type="submit" class="btn btn-success">Login</button>&nbsp; 
+                <a class="btn btn-primary" href="{% url 'forgotpassword' %}" role="button">Forgot Passowrd</a> 
                 </form>
          </div>     
 
