--- a/templates/TFC/setpassword_link.html
+++ b/templates/TFC/setpassword_link.html
@@ -17,9 +17,9 @@
                     </a>
             </nav>
             <div>
-                <p> Dear {{name}}, </p>
-                <p>You have been invited  by {{org.name}} to attend the screening test.Please click on the below link to take the test.</p>
-                http://www.{{subdomain}}.staging.forchange.in:8000/screenings/{{screeninguuid}}
+                <p> Dear {{member_name}}, </p>
+                <p>You have been invited  by {{org.name}} as organization  Admin .Please click on the below link to set your password for your organization dashboard.</p>
+                http://www.{{subdomain}}.staging.forchange.in:8000/setpassword/{{auth_token}}
             </div>
     </body>
 </html>
