--- a/templates/TFC/organization_signup.html
+++ b/templates/TFC/organization_signup.html
@@ -22,7 +22,8 @@
                     
                     <form method="post" enctype="multipart/form-data">
                             {%csrf_token%}
-                            {{form.as_p}}
+                            {{form1.as_p}}
+                            {{form2.as_p}}
                             <input type="submit" class="btn btn-success" value="Create">
                     </form>
                 </div>
