--- a/templates/TFC/password_set.html
+++ b/templates/TFC/password_set.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Organizations List</title>
+        <title></title>
 
         <script type = "text/javascript" >
             window.history.forward();
@@ -23,10 +23,18 @@
             </a>
             </nav>
             {% block body %}
+            {% if messages %}
+                    {% for msg in messages %}
+                         <div class="alert alert-info alert-dismissable">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                    {{msg.message}}
+                        </div>
+                    {% endfor %}
+                {% endif %}
             <form method="post">
                     {%csrf_token%}
-            {{form}}
-            <input type="submit" class="btn btn-success" value="Reset">
+            {{form.as_p}}
+            <input type="submit" class="btn btn-success" value="Set Password">
         </form>
             {%endblock%}
     </body>
