--- a/templates/TFC/reset_pass_instruction.html
+++ b/templates/TFC/reset_pass_instruction.html
@@ -15,12 +15,8 @@
 
                             <img src="{{org.logo.url}}" width="50", height="50">
                     </a>
-            </nav>
-            <div>
-                <p> Dear {{name}}, </p>
-                <p>You have been invited  by {{org.name}} to attend the screening test.Please click on the below link to take the test.</p>
-                http://www.{{subdomain}}.staging.forchange.in:8000/screenings/{{screeninguuid}}
-            </div>
-    </body>
-</html>
-                
+                    </nav>
+                    <p>Please Go To Your Registered Email and Reset Your Password by Using the link given in your email</p>
+                    </body>
+                    </html>
+                    
