focus area done

--- a/templates/HFC/problem_discription.html
+++ b/templates/HFC/problem_discription.html
@@ -30,7 +30,11 @@
         <p>Lorisfd giodsfkh dfosiughdsfiubhjdfsnoibulkhjbnoiusldkhgoieusghdf oiurdsgf hiourshfiosdljkfh isodfhsd</p>
         <br>
         <h5>Focus Areas</h5>
-
+        <ul>
+        {% for focus_area in focus_areas %}
+            <li>{{focus_area}}</li>
+        {% endfor %}
+        </ul>
     </div>
 </div>
 
