--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -14,8 +14,8 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <!-- Brand/logo -->
                 <a class="navbar-brand" href="#">Logo</a>
-                <a class="navbar-brand" href="{% url 'HFCCore:home' %}">Home</a>
-                <a class="navbar-brand" href="{% url 'HFCCore:problem_statements' %}">Problem Statements</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+                <a class="navbar-brand" href="{% url 'problem_statements' %}">Problem Statements</a>
                 <a class="navbar-brand" href="#">Projects</a>
                 <a class="navbar-brand" href="#">Community</a>
                 <a class="navbar-brand" href="#">About</a>
