--- a/templates/HFC/problem_statements.html
+++ b/templates/HFC/problem_statements.html
@@ -12,7 +12,7 @@
         <h2>Problem Statements</h2>
         <ul>
             {% for prob_list in problems_list  %}
-                <a href="{% url 'HFCCore:problem_discription' prob_list.title_slug %}">{{prob_list.title}}:</a>
+                <a href="{% url 'problem_discription' prob_list.title_slug %}">{{prob_list.title}}:</a>
                 <p>{{prob_list.summary}}</p>
                 <div>
                     <table>
@@ -25,7 +25,7 @@
                             <td>{{prob_list.partner_id}}</td>
                             <td>{{prob_list.issue_area}}</td>
                             <td>{{prob_list.status}}</td>
-                            <button type="button"><a href="{% url 'HFCCore:problem_discription' prob_list.title_slug %}">VIEW DETAILS</a></button>
+                            <button type="button"><a href="{% url 'problem_discription' prob_list.title_slug %}">VIEW DETAILS</a></button>
                         </tr>
                     </table>
                 </div>
@@ -37,7 +37,7 @@
         <p>Explore the problem statements across various issue areas</p>
         <ul>
             {% for prob_list in problems_list %}
-                <li><a href="{% url 'HFCCore:problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a></li>
+                <li><a href="{% url 'problem_statements_with_issuearea' prob_list.issue_area_slug %}">{{prob_list.issue_area}}</a></li>
             {% endfor %}
         </ul>
     </div>
