Screening Status added to organization dashboard

--- a/templates/TFC/volunter_list.html
+++ b/templates/TFC/volunter_list.html
@@ -41,19 +41,24 @@
                     {% endfor %}
                 {% endif %}
             
-            {% for volunteer in org.volunteer_set.all %}
+        
             <div>
-                <h3>{{volunteer.name}}</h3>
-                <h3>{{volunteer.areaofexpertise}}</h3>
-                <h3>{{volunteer.profession}}</h3>
-                <a href="" class="btn btn-primary">Edit</a>
-                <a href="" class="btn btn-danger">Delete</a>
+                {% for volunteer in volunter %}
+                <h3><a href="volunteer-details/{{volunteer.candidate_ptr_id}}">{{volunteer.name}}</a></h3>
+                {{volunteer.id}}
+                <h3>{{screening.status}}</h3>
+                <h3>{{screening.screening_result}}</h3>
+               <!---- <a href="" class="btn btn-primary">Edit</a>
+                <a href="" class="btn btn-danger">Delete</a>--->
                 
-                <br>
-
+                
+                {% endfor %}
             </div>
-            {% endfor%}
             
             {%endblock%}
+          
+              
+            
+          
     </body>
     </html>
