Mentor Signupflow Complete

--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -19,9 +19,10 @@
                 <a class="navbar-brand" href="#">Projects</a>
                 <a class="navbar-brand" href="#">Community</a>
                 <a class="navbar-brand" href="#">About</a>
-                <button type="button">Signup As A Mentor</button>
+                <!--<button type="button">Signup As A Mentor</button>-->
+                <a href="mentor/signup" class="btn btn-secondary">Signup As A Mentor</a>
 
         </nav>
-{% block body %} {% endblock %}
+{% block body %} {% endblock %}s
 </body>
 </html>
