community page added

--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -16,7 +16,7 @@
                 <a class="navbar-brand" href="#">Logo</a>
                 <a class="navbar-brand" href="{% url 'home' %}">Home</a>
                 <a class="navbar-brand" href="{% url 'problem_statements' %}">Problem Statements</a>
-                <a class="navbar-brand" href="#">Projects</a>
+                <a class="navbar-brand" href="{% url 'projects' %}">Projects</a>
                 <a class="navbar-brand" href="#">Community</a>
                 <a class="navbar-brand" href="#">About</a>
                 <button type="button">Signup As A Mentor</button>
