--- a/templates/HFC/problem_discription.html
+++ b/templates/HFC/problem_discription.html
@@ -25,9 +25,9 @@
         <p>{{problem.proposed_solution}}</p>
     </div>
     <div class="col-sm-6">
-        <h3>Foundation For Democratic Reforms</h3>
+        <h3>{{partner.name}}</h3>
         <br>
-        <p>Lorisfd giodsfkh dfosiughdsfiubhjdfsnoibulkhjbnoiusldkhgoieusghdf oiurdsgf hiourshfiosdljkfh isodfhsd</p>
+        <p>{{partner.partner_desc}}</p>
         <br>
         <h5>Focus Areas</h5>
         <ul>
