--- a/templates/ScreeningApp/screening.html
+++ b/templates/ScreeningApp/screening.html
@@ -1,4 +1,4 @@
-{% include 'header.html'%}
+{% include 'base.html'%}
 
 <!DOCTYPE html>
 <html>
@@ -12,7 +12,7 @@
   {% block body %}
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-8">
         <form method="post">
           {%csrf_token%}
 
@@ -52,7 +52,7 @@
 
 
       {%endblock%}
-      <div class="col-lg-6"></div>
+      <div class="col-lg-4"></div>
     </div>
   </div>
 
