--- a/templates/TFC/organization_list.html
+++ b/templates/TFC/organization_list.html
@@ -19,9 +19,9 @@
                     {% endif %}
             {% for org in organization %}
             <div>
-                <h3><a href="http://www.{{org.subdomain}}.staging.forchange.in:8000/">{{org.name}}</a>
-                <a href="http://www.{{org.subdomain}}.staging.forchange.in:8000/volunteer" class="btn btn-secondary" style="margin-left: 30px;">Signup As A Volunteer</a>
-                <a href="http://www.{{org.subdomain}}.staging.forchange.in:8000/donate" class="btn btn-secondary" style="margin-left: 30px;">Donate</a></h3>
+                <h3><a href="http://www.{{org.subdomain}}.staging.forchange.in/">{{org.name}}</a>
+                <a href="http://www.{{org.subdomain}}.staging.forchange.in/volunteer" class="btn btn-secondary" style="margin-left: 30px;">Signup As A Volunteer</a>
+                <a href="http://www.{{org.subdomain}}.staging.forchange.in/donate" class="btn btn-secondary" style="margin-left: 30px;">Donate</a></h3>
                 <h4>{{org.website}}</h4>
                 <br>
 
