All page header and footer added

--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -1,9 +1,9 @@
-{% include 'HFC/layout.html' %}
+{% extends 'HFC/layout.html' %}
 <!DOCTYPE html>
 <html>
 
     <head>
-        <title></title>
+        {% block title %}Home{% endblock %}
     </head>
 
     <body>
