--- a/templates/HFC/problem_statements_with_issue_area.html
+++ b/templates/HFC/problem_statements_with_issue_area.html
@@ -1,12 +1,8 @@
-{% include 'HFC/layout.html' %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Problem-Statements</title>
-</head>
-<body>
-{% block body%}
+{% extends 'HFC/layout.html' %}
+
+   
+
+
 <div class="row">
     <div class="col-sm-8">
         <h2>Problem Statements</h2>
@@ -42,7 +38,6 @@
         </ul>
     </div>
 </div>
-{% endblock %}
-</body>
-</html>
+
+
 
