--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -1,28 +1,68 @@
-
+{% load static from staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title></title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    
+    <title>{% block title %} {% endblock %}</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet"> 
+    <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <script type="text/javascript" src="{% static 'js/modernizr.min.js' %}"></script>
 </head>
 <body>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-                <!-- Brand/logo -->
-                <a class="navbar-brand" href="#">Logo</a>
-                <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-                <a class="navbar-brand" href="{% url 'problem_statements' %}">Problem Statements</a>
-                <a class="navbar-brand" href="{% url 'projects' %}">Projects</a>
-                <a class="navbar-brand" href="{% url 'community' %}">Community</a>
-                <a class="navbar-brand" href="#">About</a>
-                <!--<button type="button">Signup As A Mentor</button>-->
-                <a href="mentor/signup" class="btn btn-secondary">Signup As A Mentor</a>
 
-        </nav>
-{% block body %} {% endblock %}
+    <div id="container-fluid">
+        
+        <!--header start -->
+        <div id="header-wrap">
+                <div class="content-width">
+                <header id="header">
+                    <div class="header__left">
+                        <a href="#"><img width="58.2" src="{% static 'images/logo.png' %}" alt="LOGO"></a>
+                        <span class="menu-btn">
+                            <i></i>
+                            <i></i>
+                            <i></i>
+                        </span>
+                    </div>
+                    <div class="header__right">
+                        <ul class="main-menu">
+                            <li ><a href="{% url 'home' %}"{% if 'home' in  request.path %}class="active"{% endif %}>Home</a></li>
+                            <li><a href="{% url 'problem_statements' %}"{% if 'problem_statements' in  request.path %}class="active"{% endif %}>Problem Statements</a></li>
+                            <li><a href="{% url 'projects' %}"{% if 'projects' in  request.path %}class="active"{% endif %}>Projects</a></li>
+                            <li><a href="{% url 'community' %}"{% if 'community' in  request.path %}class="active"{% endif %}>Community</a></li>
+                            <li class="menu__hasChild"><a href="#">About</a>
+                                <ul class="sub-menu">
+                                    <li><a href="#">About Sub</a></li>
+                                    <li><a href="#">About Sub</a></li>
+                                    <li><a href="#">About Sub</a></li>
+                                    <li><a href="#">About Sub</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="btn btn--info" href="mentor/signup">Signup as a Mentor</a></li>
+                        </ul>
+                    </div>
+                </header>
+            </div>
+        </div>
+        <!--header end -->
+{% block main %}   {% endblock %}
+{% include 'HFC/footer.html' %}
+</div><!--container-fluid -->
+
+
+<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+<script src="https://kit.fontawesome.com/2babd4a8e5.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+
+<script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
+
 </body>
 </html>
+
+
+
+
